--- a/Assignments/2/client/src/App.css
+++ b/Assignments/2/client/src/App.css
@@ -76,3 +76,12 @@ h5 {
   height: 17vw;
   object-fit: fill;
 }
+.spinner{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+} 
